Fixed tech overlay on mobile

--- a/styles/scss/components/slideshow.scss
+++ b/styles/scss/components/slideshow.scss
@@ -22,6 +22,51 @@
     display: none;
 }
 
+#mobile-slideshow{
+    li{
+        div{
+            position: absolute;
+            display: inline-block;
+        }
+    }
+
+    .first-slide{
+        div{
+            top: 50%;
+            left: 55%;
+        }
+    }
+
+    .second-slide{
+        div{
+            top: 60%;
+            left: 20%;
+
+            p{
+                text-align: right;
+            }
+        }
+    }
+
+    .third-slide{
+        div{
+            top: 30%;
+            left: 30%;
+        
+            p{
+                text-align: right;
+            }
+        }
+    }
+
+    .fourth-slide{
+        div{
+            top: 20%;
+            left: 20%;
+        }
+    }
+}
+
 .slideshow{
     li{
         div{
